update branch references master -> main

--- a/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress-menu.mdx
@@ -13,6 +13,7 @@ Sadly, not every application includes a form, e.g. claim status tool. You won't
 see this save-in-progress menu or link show up on those pages.
 
 This save-in-progress menu will allow you to:
+
 - [Using the Save in Progress menu](#using-the-save-in-progress-menu)
   - [Activating & Deactivating](#activating--deactivating)
     - [Activate](#activate)
@@ -28,9 +29,14 @@ This save-in-progress menu will allow you to:
   - [Return url](#return-url)
     - [Jump to a specific page within the form](#jump-to-a-specific-page-within-the-form)
 
-<img width="506" alt="save-in-progress menu" src="../../images/forms/sips-menu.png" />
+<img
+  width="506"
+  alt="save-in-progress menu"
+  src="../../images/forms/sips-menu.png"
+/>
 
 Scenarios:
+
 - You have a user that doesn't have specific mock data available. Open this
   menu and add the new data; For example, for form 526, some mock users don't
   include pre-existing rated disabilities. This menu will allow you to enter
@@ -62,7 +68,11 @@ If you don't see the "Open save-in-progress menu" link:
   required hash will look like this - `#dev-on` - add it to the end of the url
 - Press <kbd>Enter</kbd> on the keyboard. The link will immediately show up.
 
-<img width="513" alt="Add `#dev-on` hash shows link" src="../../images/forms/sips-menu-link.png" />
+<img
+  width="513"
+  alt="Add `#dev-on` hash shows link"
+  src="../../images/forms/sips-menu-link.png"
+/>
 
 ### Deactivate
 
@@ -75,7 +85,11 @@ To hide the link:
   If the menu is open, it will also disappear, but may automatically reappear
   if immediately re-activated.
 
-<img width="528" alt="Add `#dev-off` hash hides link" src="../../images/forms/sips-menu-no-link.png" />
+<img
+  width="528"
+  alt="Add `#dev-off` hash hides link"
+  src="../../images/forms/sips-menu-no-link.png"
+/>
 
 ## Buttons
 
@@ -92,7 +106,11 @@ progress menu _and_ close the menu.
 At the bottom of the save-in-progress menu are two buttons: "Replace" and
 "Merge".
 
-<img width="350" alt="save-in-progress buttons" src="../../images/forms/sips-menu-buttons.png" />
+<img
+  width="350"
+  alt="save-in-progress buttons"
+  src="../../images/forms/sips-menu-buttons.png"
+/>
 
 #### Replace
 
@@ -116,27 +134,27 @@ Most forms include a `maximal-test.json` file for testing. Copy the content of
 this file and paste it into the menu form data (as-is) to apply this data
 (current as of July 2020; some of these forms may not be in production):
 
-- [burials](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/burials/tests/schema/maximal-test.json)
-- [disability-benefits/686](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/disability-benefits/686/tests/schema/maximal-test.json)
-- [disability-benefits/996](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/disability-benefits/996/tests/fixtures/data/maximal-test.json)
-- [disability-benefits/all-claims](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/disability-benefits/all-claims/tests/fixtures/data/maximal-test.json)
-- [disability-benefits/bdd](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/disability-benefits/all-claims/tests/fixtures/data/maximal-bdd-test.json)
-- [edu-benefits/10203](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/10203/tests/schema/maximal-test.json)
-- [edu-benefits/0993](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/0993/schema/maximal-test.json)
-- [edu-benefits/0994](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/0994/schema/maximal-test.json)
-- [edu-benefits/1990](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/1990/schema/maximal-test.json)
-- [edu-benefits/1990e](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/1990e/schema/maximal-test.json)
-- [edu-benefits/1990n](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/1990n/schema/maximal-test.json)
-- [edu-benefits/1995](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/1995/schema/maximal-test.json)
-- [edu-benefits/5490](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/5490/schema/maximal-test.json)
-- [edu-benefits/5495](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/5495/schema/maximal-test.json)
-- [edu-benefits/feedback](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/edu-benefits/tests/feedback-tool/schema/maximal-test.json)
-- [hca](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/hca/tests/schema/maximal-test.json)
-- [pensions](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/pensions/tests/schema/maximal-test.json)
-- [pre-need](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/pre-need/tests/schema/maximal-test.json)
-- [veteran-representative](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/veteran-representative/tests/schema/maximal-test.json)
-- [vre/chapter31](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/vre/tests/chapter31/schema/maximal-test.json)
-- [vre/chapter36](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/vre/tests/chapter36/schema/maximal-test.json)
+- [burials](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/burials/tests/schema/maximal-test.json)
+- [disability-benefits/686](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/disability-benefits/686/tests/schema/maximal-test.json)
+- [disability-benefits/996](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/disability-benefits/996/tests/fixtures/data/maximal-test.json)
+- [disability-benefits/all-claims](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/disability-benefits/all-claims/tests/fixtures/data/maximal-test.json)
+- [disability-benefits/bdd](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/disability-benefits/all-claims/tests/fixtures/data/maximal-bdd-test.json)
+- [edu-benefits/10203](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/10203/tests/schema/maximal-test.json)
+- [edu-benefits/0993](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/0993/schema/maximal-test.json)
+- [edu-benefits/0994](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/0994/schema/maximal-test.json)
+- [edu-benefits/1990](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/1990/schema/maximal-test.json)
+- [edu-benefits/1990e](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/1990e/schema/maximal-test.json)
+- [edu-benefits/1990n](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/1990n/schema/maximal-test.json)
+- [edu-benefits/1995](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/1995/schema/maximal-test.json)
+- [edu-benefits/5490](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/5490/schema/maximal-test.json)
+- [edu-benefits/5495](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/5495/schema/maximal-test.json)
+- [edu-benefits/feedback](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/edu-benefits/tests/feedback-tool/schema/maximal-test.json)
+- [hca](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/hca/tests/schema/maximal-test.json)
+- [pensions](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/pensions/tests/schema/maximal-test.json)
+- [pre-need](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/pre-need/tests/schema/maximal-test.json)
+- [veteran-representative](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/veteran-representative/tests/schema/maximal-test.json)
+- [vre/chapter31](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/vre/tests/chapter31/schema/maximal-test.json)
+- [vre/chapter36](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/vre/tests/chapter36/schema/maximal-test.json)
 
 **Note**:
 
@@ -145,13 +163,17 @@ this file and paste it into the menu form data (as-is) to apply this data
   content; then use <kbd>Ctrl</kbd> or <kbd>&#x2318;</kbd> plus <kbd>c</kbd> to copy the selected text.
 - To paste in the clipboard contents, use <kbd>Ctrl</kbd> or <kbd>&#x2318;</kbd> plus <kbd>v</kbd>.
 - After pasting in the complete form data into the textarea, use the "Replace" button to completely replace the form data. Using "Merge" would also
-work, but may not remove unrelated data.
+  work, but may not remove unrelated data.
 
 ### Edit the data without being on a specific page
 
 Within the save-in-progress menu, the textarea containing the "Form data" is editable. This would allow you to edit data in-place
 
-<img width="350" alt="save-in-progress buttons" src="../../images/forms/sips-menu-form-data.png" />
+<img
+  width="350"
+  alt="save-in-progress buttons"
+  src="../../images/forms/sips-menu-form-data.png"
+/>
 
 Edit the value, then use the "Replace" button.
 
@@ -178,7 +200,11 @@ form, then continue the form and open the menu a second time. Set the target
 page and use the "Replace" button again. This isn't ideal, but it'll work until
 a more optimal solution is found.
 
-<img width="387" alt="Return url select" src="../../images/forms/sips-menu-return-url.png" />
+<img
+  width="387"
+  alt="Return url select"
+  src="../../images/forms/sips-menu-return-url.png"
+/>
 
 ### Jump to a specific page within the form
 
@@ -189,6 +215,10 @@ a more optimal solution is found.
   it may be that the target url may not be a valid destination. You may have to
   restart the form to fix this problem.
 
-<img width="485" alt="Return url select" src="../../images/forms/sips-menu-return-url-expanded.png" />
+<img
+  width="485"
+  alt="Return url select"
+  src="../../images/forms/sips-menu-return-url-expanded.png"
+/>
 
 Next: [Forms in production](/forms/forms-in-production)
