--- a/packages/documentation/src/pages/forms/save-in-progress.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress.mdx
@@ -69,8 +69,16 @@ widgets:
 And somewhere in the file, where you want the widget to show up:
 
 ```html
-<div id="react-applicationStatus" class="static-page-widget" data-widget-type="health-care-app-status">
-  <a class="usa-button-primary va-button-primary" href="/health-care/apply/application/">Apply for Health Care Benefits</a>
+<div
+  id="react-applicationStatus"
+  class="static-page-widget"
+  data-widget-type="health-care-app-status"
+>
+  <a
+    class="usa-button-primary va-button-primary"
+    href="/health-care/apply/application/"
+    >Apply for Health Care Benefits</a
+  >
 </div>
 ```
 
@@ -82,23 +90,20 @@ Once that's done, you can open up the static pages entry file at `src/applicatio
 
 ```js
 createApplicationStatus(store, {
-  formId: '1010ez',
-  additionalText: 'You can start your online application right now.',
-  applyLink: '/health-care/apply/',
-  applyText: 'Apply for Health Care Benefits',
+  formId: "1010ez",
+  additionalText: "You can start your online application right now.",
+  applyLink: "/health-care/apply/",
+  applyText: "Apply for Health Care Benefits",
   widgetType: widgetTypes.HEALTH_CARE_APP_STATUS,
 });
 ```
 
 The main things to note are that the `widgetType` should match the one you added to the widget types list. The code block also has some configuration options for your form that should be easy to get from the form config object.
 
-**Note:** An analytics event is added to the form introduction page by default. To finish setting it up, add an analytics event name to `gaStartEventName` property of the [`SaveInProgressIntro`](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/forms/save-in-progress/SaveInProgressIntro.jsx) component, which is used on `IntroductionPage`:
+**Note:** An analytics event is added to the form introduction page by default. To finish setting it up, add an analytics event name to `gaStartEventName` property of the [`SaveInProgressIntro`](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/forms/save-in-progress/SaveInProgressIntro.jsx) component, which is used on `IntroductionPage`:
 
 ```html
-<SaveInProgressIntro
-  gaStartEventName="my-start-form-event-name"
-  ...
-/>
+<SaveInProgressIntro gaStartEventName="my-start-form-event-name" ... />
 ```
 
 Once you've got all that set up, your form should appear on the profile page:
