--- a/packages/documentation/src/pages/platform/front-end-standards/react.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/react.mdx
@@ -7,26 +7,42 @@ title: Frontend Best Practices
 **Last Updated:** April 28, 2017
 
 <div class="deprecation-message">
-    <h2>We're moving our docs!</h2>
-    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Best-practices.1824489781.html">the latest version of this page</a> on the Platform website.</h3>
-    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+  <h2>We're moving our docs!</h2>
+  <h3>
+    Find{" "}
+    <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Best-practices.1824489781.html">
+      the latest version of this page
+    </a>{" "}
+    on the Platform website.
+  </h3>
+  <h3>
+    Still can't find what you're looking for? Reach out to{" "}
+    <a href="https://dsva.slack.com/archives/CBU0KDSB1">
+      #vfs-platform-support
+    </a>{" "}
+    on Slack.
+  </h3>
 </div>
 
 ## Overview
+
 This is an initial pass at the best practices followed in vets.gov front-end development.
 
 ### Objective
+
 To promote a consistent approach to vets.gov front-end development by outlining an evolving set of best practices.
 
 ### Background
+
 Over the last year, we have launched a number of different single-page React/Redux apps on vets.gov, in addition to building digital forms using a [form-builder library](https://github.com/mozilla-services/react-jsonschema-form) that reuses the same code to run multiple React apps for different forms. This document is an attempt to begin collecting best practices for React/Redux development that the team has and continues to lean toward when architecting and developing front-end applications.
 
 ### High Order Guidelines
 
 This is a placeholder for any high-level paradigms we settle on. For now, it's merely a laundry list of debatable topics:
-  - *PropTypes*: we try to define PropTypes to make it easier for newcomers to understand what can be passed to a component.
-  - What to put into a selector vs. reducer vs. action
-  - How we map backend data to the state?
+
+- _PropTypes_: we try to define PropTypes to make it easier for newcomers to understand what can be passed to a component.
+- What to put into a selector vs. reducer vs. action
+- How we map backend data to the state?
 
 ### React/Redux Guidelines
 
@@ -48,33 +64,33 @@ Keep in mind that these are general conventions, not iron-clad rules, and we sho
 
 ### Existing Guides and Tools
 
-We have a set of [ESLint rules](https://github.com/department-of-veterans-affairs/vets-website/blob/master/.eslintrc) that extend the [AirBnB style guide](https://github.com/airbnb/javascript) and also use the [Prettier](https://prettier.io) [ESLint rules](https://prettier.io/docs/en/eslint.html). There is a pre-commit hook that prevents committing code that fails the ESLint rules. Developers should all be using ESLint plugins in their dev environments to catch lint-able things. In lieu of using an ESLint editor plugin, developers can run the `lint:js:fix` or `lint:js:changed:fix` NPM scripts to fix all errors that ESLint can auto-fix.
+We have a set of [ESLint rules](https://github.com/department-of-veterans-affairs/vets-website/blob/main/.eslintrc) that extend the [AirBnB style guide](https://github.com/airbnb/javascript) and also use the [Prettier](https://prettier.io) [ESLint rules](https://prettier.io/docs/en/eslint.html). There is a pre-commit hook that prevents committing code that fails the ESLint rules. Developers should all be using ESLint plugins in their dev environments to catch lint-able things. In lieu of using an ESLint editor plugin, developers can run the `lint:js:fix` or `lint:js:changed:fix` NPM scripts to fix all errors that ESLint can auto-fix.
 
 _TODO: list any notable exceptions here._
 
 ### Project Structure and Code Location
 
-The structure of our React app's is described in [How to Start a New ReactJS Project](https://github.com/department-of-veterans-affairs/vets-website/blob/master/docs/StartANewReactApp.md)
+The structure of our React app's is described in [How to Start a New ReactJS Project](https://github.com/department-of-veterans-affairs/vets-website/blob/main/docs/StartANewReactApp.md)
 
-A number (and soon all) of our forms use the [`react-json-schemaform`](https://github.com/mozilla-services/react-jsonschema-form) (or rjsf) library. To learn more about those, see [schemaform walkthrough](https://github.com/department-of-veterans-affairs/vets-website/blob/master/docs/schemaform/walkthrough.md) and this [form config cookbook](https://github.com/department-of-veterans-affairs/vets-website/blob/master/docs/schemaform/form-config.md).
+A number (and soon all) of our forms use the [`react-json-schemaform`](https://github.com/mozilla-services/react-jsonschema-form) (or rjsf) library. To learn more about those, see [schemaform walkthrough](https://github.com/department-of-veterans-affairs/vets-website/blob/main/docs/schemaform/walkthrough.md) and this [form config cookbook](https://github.com/department-of-veterans-affairs/vets-website/blob/main/docs/schemaform/form-config.md).
 
 ### Related Documents
 
-  * [Using Redux](/Work%20Practices/Engineering/DocumentedDecisions/Redux.md)
-  * [How to Start a New ReactJS Project](https://github.com/department-of-veterans-affairs/vets-website/blob/master/docs/StartANewReactApp.md)
-  * [Schemaform walkthrough](https://github.com/department-of-veterans-affairs/vets-website/blob/master/docs/schemaform/walkthrough.md)
-  * [Form config cookbook](https://github.com/department-of-veterans-affairs/vets-website/blob/master/docs/schemaform/form-config.md)
+- [Using Redux](/Work%20Practices/Engineering/DocumentedDecisions/Redux.md)
+- [How to Start a New ReactJS Project](https://github.com/department-of-veterans-affairs/vets-website/blob/main/docs/StartANewReactApp.md)
+- [Schemaform walkthrough](https://github.com/department-of-veterans-affairs/vets-website/blob/main/docs/schemaform/walkthrough.md)
+- [Form config cookbook](https://github.com/department-of-veterans-affairs/vets-website/blob/main/docs/schemaform/form-config.md)
 
-  Existing posts/articles on best practices that we may or may not agree with but can pull topics from:
-    * [React best practices](https://medium.com/@nesbtesh/react-best-practices-a76fd0fbef21)
-    * [Redux best practices](https://medium.com/lexical-labs-engineering/redux-best-practices-64d59775802e)
-    * [Long list of links about react architecture and best practices](https://github.com/markerikson/react-redux-links/blob/master/react-architecture.md)
-    * [Redux isn't slow, you're just doing it wrong - An optimization guide](https://reactrocket.com/post/react-redux-optimization/)
+Existing posts/articles on best practices that we may or may not agree with but can pull topics from:
+_ [React best practices](https://medium.com/@nesbtesh/react-best-practices-a76fd0fbef21)
+_ [Redux best practices](https://medium.com/lexical-labs-engineering/redux-best-practices-64d59775802e)
+_ [Long list of links about react architecture and best practices](https://github.com/markerikson/react-redux-links/blob/master/react-architecture.md)
+_ [Redux isn't slow, you're just doing it wrong - An optimization guide](https://reactrocket.com/post/react-redux-optimization/)
 
 ### Revision History
 
-Date | Revisions Made | Author | Reviewed By
------|----------------|--------|--------------
-March 1, 2017 | Skeleton document based on outline of [Node.js Best Practices](Javascript/Node.js.md)
-April 28, 2017 | Pulled in content from discussion in [#659](https://github.com/department-of-veterans-affairs/vets.gov-team/issues/659)
-May 17, 2017 | Added information about React component types and `setState` usage
+| Date           | Revisions Made                                                                                                          | Author | Reviewed By |
+| -------------- | ----------------------------------------------------------------------------------------------------------------------- | ------ | ----------- |
+| March 1, 2017  | Skeleton document based on outline of [Node.js Best Practices](Javascript/Node.js.md)                                   |
+| April 28, 2017 | Pulled in content from discussion in [#659](https://github.com/department-of-veterans-affairs/vets.gov-team/issues/659) |
+| May 17, 2017   | Added information about React component types and `setState` usage                                                      |
