--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -6,9 +6,21 @@ tags: local, watch, node, nvm, yarn, install
 # Set up VA.gov locally
 
 <div class="deprecation-message">
-    <h2>We're moving our docs!</h2>
-    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Setting-up-your-local-frontend-environment.1844215878.html">the latest version of this page</a> on the Platform website.</h3>
-    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+  <h2>We're moving our docs!</h2>
+  <h3>
+    Find{" "}
+    <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Setting-up-your-local-frontend-environment.1844215878.html">
+      the latest version of this page
+    </a>{" "}
+    on the Platform website.
+  </h3>
+  <h3>
+    Still can't find what you're looking for? Reach out to{" "}
+    <a href="https://dsva.slack.com/archives/CBU0KDSB1">
+      #vfs-platform-support
+    </a>{" "}
+    on Slack.
+  </h3>
 </div>
 
 These instructions cover building and running VA.gov locally, including configuring any required dependencies.
@@ -75,87 +87,97 @@ These instructions cover building and running VA.gov locally, including configur
    ```
 
    **Front end repos**
+
    - `vets-website`: Core front end platform and application code
    - `vagov-content`: Markdown content used to generate static pages
    - `content-build`: Liquid templates and content build for static pages
    - `veteran-facing-services-tools`: Shared front end components (including non VA.gov users) and front end documentation site
 
    **Back end repos**
+
    - `vets-api`: Core Rails API server application code
    - `vets-api-mockdata`: Mock data used when running locally and on dev for the backend
 
    **Shared repos**
+
    - `vets-json-schema`: Shared JSON Schema definitions used by form applications and the APIs that they consume
 
 ## Start up the front end
 
 ### vets-website
 
-7a. Navigate to the `vets-website` repository, then install `vets-website` dependencies. See these [common commands](https://github.com/department-of-veterans-affairs/vets-website/blob/master/README.md) for more information.
-   ```bash
-   $ cd vets-website
-   $ yarn install
-   ```
+7a. Navigate to the `vets-website` repository, then install `vets-website` dependencies. See these [common commands](https://github.com/department-of-veterans-affairs/vets-website/blob/main/README.md) for more information.
+
+```bash
+$ cd vets-website
+$ yarn install
+```
 
 8a. Build `vets-website`. If you're only doing application work inside `vets-website` you can run the build command which contains the scaffolding option by default:
-   ```bash
-   $ yarn build
-   ```
 
-   If you need the CSS and JS generated for work in `content-build` you can run a normal build:
+```bash
+$ yarn build
+```
 
-   ```bash
-   $ yarn build
-   ```
+If you need the CSS and JS generated for work in `content-build` you can run a normal build:
 
-9a. Start the local development server. If you are applying CSS and/or JS changes to a static page/template that renders 
+```bash
+$ yarn build
+```
+
+9a. Start the local development server. If you are applying CSS and/or JS changes to a static page/template that renders
 in `content-build`, we recommend leaving this command running so you will be able to see the changes in `content-build`.
-   ```bash
-   $ yarn watch
-   ```
 
-   The watch is complete when the CLI says `Compiled successfully`.
+```bash
+$ yarn watch
+```
 
-   If you would like webpack to open a browser window for you, please run `yarn watch --open`. We use [Webpack DevServer](https://webpack.js.org/configuration/dev-server/) to watch and serve the files locally; all the same options and documentation should apply.
+The watch is complete when the CLI says `Compiled successfully`.
 
-10a. Open [http://localhost:3001](http://localhost:3001) in a browser if you are working on an app; 
+If you would like webpack to open a browser window for you, please run `yarn watch --open`. We use [Webpack DevServer](https://webpack.js.org/configuration/dev-server/) to watch and serve the files locally; all the same options and documentation should apply.
+
+10a. Open [http://localhost:3001](http://localhost:3001) in a browser if you are working on an app;
 otherwise, continue on to the [content-build](#content-build) section for viewing changes in the browser.
 
 ### content-build
 
-**NOTE:** In order to run `content-build`, you must first generate the CSS and JS files within `vets-website` 
+**NOTE:** In order to run `content-build`, you must first generate the CSS and JS files within `vets-website`
 (follow steps above). If you don't, you will see a build error in the console instructing you to first
-generate files in `vets-website`. If you are applying CSS and/or JS changes to a static page/template that renders 
-in `content-build` (like the homepage) you will need to run a watch in `vet-website` to view 
-the updates. The CSS and JS files within `vets-website` are locally connected through a symlink 
+generate files in `vets-website`. If you are applying CSS and/or JS changes to a static page/template that renders
+in `content-build` (like the homepage) you will need to run a watch in `vet-website` to view
+the updates. The CSS and JS files within `vets-website` are locally connected through a symlink
 in the build process.
 
 If you don't need to locally view static pages and are just working on applications, you don't need to set this part up.
 
 7b. Navigate to the `content-build` repository, then install dependencies via `yarn`
-   ```bash
-   $ cd content-build
-   $ yarn install
-   ```
+
+```bash
+$ cd content-build
+$ yarn install
+```
 
 8b. Build `content-build`. Make sure you [configured the SOCKS proxy](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/engineering/internal-tools.md#configure-the-socks-proxy) to fetch content from Drupal.
-   ```bash
-   $ yarn build
-   ```
 
-   If you do not have access to the SOCKS proxy, you can alternately fetch the latest cached version of the content.
-   ```bash
-   $ yarn fetch-drupal-cache
-   ```
+```bash
+$ yarn build
+```
+
+If you do not have access to the SOCKS proxy, you can alternately fetch the latest cached version of the content.
+
+```bash
+$ yarn fetch-drupal-cache
+```
 
 9a. Start the local development server.
-   ```bash
-   $ yarn watch
-   ```
 
-   The watch is complete when the CLI says `Compiled successfully`. If you just need a server running without 
-   watching the metalsmith files you can run `npx http-server . -p 3002` inside `/build/localhost` to 
-   save some CPU.
+```bash
+$ yarn watch
+```
+
+The watch is complete when the CLI says `Compiled successfully`. If you just need a server running without
+watching the metalsmith files you can run `npx http-server . -p 3002` inside `/build/localhost` to
+save some CPU.
 
 10a. Open [http://localhost:3002](http://localhost:3002) in a browser
 
