--- a/packages/documentation/src/pages/platform/site-structure/application-structure.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/application-structure.mdx
@@ -6,9 +6,21 @@ tags: bundle, react, webpack, site-wide
 # Page and application Javascript structure
 
 <div class="deprecation-message">
-    <h2>We're moving our docs!</h2>
-    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Page-and-application-JavaScript-structure.1855062047.html">the latest version of this page</a> on the Platform website.</h3>
-    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+  <h2>We're moving our docs!</h2>
+  <h3>
+    Find{" "}
+    <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Page-and-application-JavaScript-structure.1855062047.html">
+      the latest version of this page
+    </a>{" "}
+    on the Platform website.
+  </h3>
+  <h3>
+    Still can't find what you're looking for? Reach out to{" "}
+    <a href="https://dsva.slack.com/archives/CBU0KDSB1">
+      #vfs-platform-support
+    </a>{" "}
+    on Slack.
+  </h3>
 </div>
 
 In this doc we'll go over how a page on VA.gov is related to the application code located in vets-website.
@@ -35,7 +47,7 @@ entryname: dashboard
 
 When this page is built, the `entryname` property tells our build process how to construct the path for the third script tag in the above group. For pages that don't have an `entryname`, the `static-pages` bundle will be used.
 
-In `vets-website`, there will be a manifest.json (or manifest.js) file with a matching entry name. In this case we can search for `entryName: 'dashboard'` and find [src/applications/personalization/dashboard/manifest.js](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/personalization/dashboard/manifest.js). The `entryFile` property in the manifest will tell you the entry point for this application, the file that Webpack uses as its entry for creating the `dashboard` bundle.
+In `vets-website`, there will be a manifest.json (or manifest.js) file with a matching entry name. In this case we can search for `entryName: 'dashboard'` and find [src/applications/personalization/dashboard/manifest.js](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/personalization/dashboard/manifest.js). The `entryFile` property in the manifest will tell you the entry point for this application, the file that Webpack uses as its entry for creating the `dashboard` bundle.
 
 ## Structure of a page
 
@@ -57,35 +69,35 @@ F[Announcements]-->A
 
 Static content pages work similarly, except the main content area is not a React component (though it may have one or more React widgets mounted within it).
 
-As we covered in the last section, `/my-va` uses the `dashboard` bundle, the entry file for which is located [here](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/personalization/dashboard/dashboard-entry.jsx). There's not a lot of code in that file; most of the functionality is abstracted in `startApp`. The dashboard passes in a reducer and routes, which is the primary application. In the [startApp](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/startup/index.js#L31) function, we create the [common Redux store](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/startup/index.js#L44), [start the site-wide components](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/startup/index.js#L64), and [mount the primary React application](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/startup/index.js#L73):
+As we covered in the last section, `/my-va` uses the `dashboard` bundle, the entry file for which is located [here](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/personalization/dashboard/dashboard-entry.jsx). There's not a lot of code in that file; most of the functionality is abstracted in `startApp`. The dashboard passes in a reducer and routes, which is the primary application. In the [startApp](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/startup/index.js#L31) function, we create the [common Redux store](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/startup/index.js#L44), [start the site-wide components](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/startup/index.js#L64), and [mount the primary React application](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/startup/index.js#L73):
 
 ![Abbreviated dashboard with yellow boxes drawn around site wide components](../../../images/platform/sitewide_primary.png)
 
-The components in the yellow boxes are the common site-wide components started by [startSitewideComponents](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/site-wide/index.js#L26) and the blue box is the primary React application.
+The components in the yellow boxes are the common site-wide components started by [startSitewideComponents](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/site-wide/index.js#L26) and the blue box is the primary React application.
 
 ## Structure of a React application
 
-Our React applications can vary in structure depending on what their purpose is, but typically they have a reducer and actions for Redux related logic and routes and components for the rest of the application. Routes are typically the best place to start looking at an application. Again using `/my-va` as an example, you can see the React components to start looking at in the [routes.jsx](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/personalization/dashboard/routes.jsx) file:
+Our React applications can vary in structure depending on what their purpose is, but typically they have a reducer and actions for Redux related logic and routes and components for the rest of the application. Routes are typically the best place to start looking at an application. Again using `/my-va` as an example, you can see the React components to start looking at in the [routes.jsx](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/personalization/dashboard/routes.jsx) file:
 
 ```jsx
-import DashboardApp from './containers/DashboardApp';
-import DashboardAppNew from './containers/DashboardAppNew';
-import DashboardAppWrapper from './containers/DashboardAppWrapper';
-import SetPreferences from '../preferences/containers/SetPreferences';
+import DashboardApp from "./containers/DashboardApp";
+import DashboardAppNew from "./containers/DashboardAppNew";
+import DashboardAppWrapper from "./containers/DashboardAppWrapper";
+import SetPreferences from "../preferences/containers/SetPreferences";
 
-import environment from 'platform/utilities/environment';
+import environment from "platform/utilities/environment";
 
 const component = environment.isProduction() ? DashboardApp : DashboardAppNew;
 
 export const findBenefitsRoute = {
-  path: 'find-benefits',
+  path: "find-benefits",
   component: SetPreferences,
-  key: 'find-benefits',
-  name: 'Find VA benefits',
+  key: "find-benefits",
+  name: "Find VA benefits",
 };
 
 const routes = {
-  path: '/',
+  path: "/",
   component: DashboardAppWrapper,
   indexRoute: { component },
   childRoutes: [findBenefitsRoute],
@@ -96,7 +108,7 @@ export default routes;
 
 There are only two routes in here, but you can see that there's a main `DashboardAppWrapper` component and then a `DashboardApp` component for the main index route.
 
-[DashboardAppWrapper](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/personalization/dashboard/containers/DashboardAppWrapper.jsx) has some important functionality that's common to a lot of our applications. Here's the render method from that component:
+[DashboardAppWrapper](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/applications/personalization/dashboard/containers/DashboardAppWrapper.jsx) has some important functionality that's common to a lot of our applications. Here's the render method from that component:
 
 ```jsx
 render() {
