--- a/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
@@ -6,9 +6,21 @@ tags: build process, Javascript applications, design system, routing for react a
 # VA.gov client overview
 
 <div class="deprecation-message">
-    <h2>We're moving our docs!</h2>
-    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Frontend-architecture.1855324196.html">the latest version of this page</a> on the Platform website.</h3>
-    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+  <h2>We're moving our docs!</h2>
+  <h3>
+    Find{" "}
+    <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Frontend-architecture.1855324196.html">
+      the latest version of this page
+    </a>{" "}
+    on the Platform website.
+  </h3>
+  <h3>
+    Still can't find what you're looking for? Reach out to{" "}
+    <a href="https://dsva.slack.com/archives/CBU0KDSB1">
+      #vfs-platform-support
+    </a>{" "}
+    on Slack.
+  </h3>
 </div>
 
 Welcome to the VA digital services platform front-end overview. The goal of this article is to provide a high level overview of our front end architecture to get you oriented with the [vets-website](https://github.com/department-of-veterans-affairs/vets-website) repository.
@@ -23,11 +35,11 @@ The content build process for this is controlled by a tool called [Metalsmith](h
 
 ## Javascript applications
 
-Javascript applications are the other type of functionality in vets-website. These applications are written in [React](https://reactjs.org/) and [Redux](https://redux.js.org/), and live in `src/applications/` in `vets-website`. For each app, you'll find a `manifest.json` file that contains application information as well as an entry in the `src/applications/registry.json`.  The `manifest.json` is used by Webpack in the application build, while the `registry.json` is used by the content build. See [Creating a new application](/veteran-facing-services-tools/getting-started/common-tasks/new-application/#manual-set-up) for more information on the difference between the `manifest.json` files and the `registry.json` file.
+Javascript applications are the other type of functionality in vets-website. These applications are written in [React](https://reactjs.org/) and [Redux](https://redux.js.org/), and live in `src/applications/` in `vets-website`. For each app, you'll find a `manifest.json` file that contains application information as well as an entry in the `src/applications/registry.json`. The `manifest.json` is used by Webpack in the application build, while the `registry.json` is used by the content build. See [Creating a new application](/veteran-facing-services-tools/getting-started/common-tasks/new-application/#manual-set-up) for more information on the difference between the `manifest.json` files and the `registry.json` file.
 
 You'll find the root url of the application, which you can use to navigate to that application on the site. These applications also usually have client-side routes, so opening that root url may allow you to click to other pages that are fully client-side.
 
-If you're a developer, most of your time will likely be spent working on a React application. We use React because it's widely used by front end developers and provides a good balance of performance and approachability. We also use Redux to manage application state, also because it's commonly used with React and fits most of the applications on VA.gov well. We use [React Router](https://reacttraining.com/react-router/) for client-side routing and [Webpack](https://webpack.js.org/) as a build tool, both of which are the *de facto* standards in the Javascript world. For styles we use [Sass](https://sass-lang.com/), and for dependency management we use [Yarn](https://yarnpkg.com/en/).
+If you're a developer, most of your time will likely be spent working on a React application. We use React because it's widely used by front end developers and provides a good balance of performance and approachability. We also use Redux to manage application state, also because it's commonly used with React and fits most of the applications on VA.gov well. We use [React Router](https://reacttraining.com/react-router/) for client-side routing and [Webpack](https://webpack.js.org/) as a build tool, both of which are the _de facto_ standards in the Javascript world. For styles we use [Sass](https://sass-lang.com/), and for dependency management we use [Yarn](https://yarnpkg.com/en/).
 
 ## Design system
 
@@ -36,6 +48,7 @@ You will also find that our visual components and site-wide styles live in an ex
 ## Routing for React apps
 
 ### Production
+
 The production deployment of the vet-website front end consists of static HTML, CSS, and JS assets deployed to an Amazon S3 bucket. We have an nginx server that serves those static assets and does some extra route handling for our single page React apps.
 
 React applications have a single entry page created by the content build and a special nginx [config entry](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vetsgov/vars/react_routes.yml). Each of the React applications listed in that config are standalone single page apps, and for each of the urls listed in that section of the config, the nginx server routes anything that starts with that url to the static page at that url, instead of trying to find a content page for a client-side route with the app. See the example below for a step by step view of that process.
@@ -59,8 +72,7 @@ One other thing to note is that links that use the `Link` component or the `rout
 
 Locally, we've configured the webpack dev server to do the same redirects as nginx, however they are duplicated in a couple places:
 
-- [script/build.js](https://github.com/department-of-veterans-affairs/vets-website/blob/master/script/build.js)
-- [src/platform/testing/e2e/test-server.js](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/testing/e2e/test-server.js) (for e2e tests)
+- [script/build.js](https://github.com/department-of-veterans-affairs/vets-website/blob/main/script/build.js)
+- [src/platform/testing/e2e/test-server.js](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/testing/e2e/test-server.js) (for e2e tests)
 
 You will need to update these locations as well as the nginx config when creating a new React application.
-
